--- a/MemcacheAdmin/Views/Home/Server.cshtml
+++ b/MemcacheAdmin/Views/Home/Server.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Request.IsAuthenticated) {
+@if (true) {
 
         var notFirst = false;
         <a href="javascript:history.back()" >Back</a>
