--- a/MemcacheAdmin/Views/Home/Servers.cshtml
+++ b/MemcacheAdmin/Views/Home/Servers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MemcacheAdmin.Models.Server
 
 
-@if (Request.IsAuthenticated && ViewBag.Items != null) {
+@if (ViewBag.Items != null) {
 
         var notFirst = false;
 
